--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Clark Williams</strong>.</h1>
 							</header>
-							<p>I'm a <strong>full-stack web developer</strong><br> and a basketball enthusiast/Lord of the Rings nerd.</p>
+							<p>I'm a <strong>full-stack web developer</strong> (in training), <br> sports (football and especially basketball) coach/player, military history buff, gamer, and Lord of the Rings nerd. Lover of many weapon types, from ancient times to modern firearms. And much more...</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -46,33 +46,33 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Full stack web development, youth sports coach, </p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments-o"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>HTML/CSS</h3>
+								<p>Designing and laying out your website. How do you want it to look?</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>JavaScript</h3>
+								<p>Functionality to your website and web apps.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-o-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Other</h3>
+								<p>Basketball? Football? History? Weapons? Lord of the Rings? And more...</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Curious about my work?</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -83,28 +83,28 @@
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>Websites, Web apps, games, and more!</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="file:///C:/Users/clark/source/repos/Clark%20Williams%20Website%20Test%20Project/Homepage%20VSC.html" class="image featured"><img src="images/pic01.jpg" alt="Clark's Website" /></a>
+								<h3><a href="file:///C:/Users/clark/source/repos/Clark%20Williams%20Website%20Test%20Project/Homepage%20VSC.html">theclarkwilliams.com</a></h3>
+								<p>My test website I built before starting Lambda</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/Cwill14/responsive-web-design-I" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<h3><a href="https://github.com/Cwill14/responsive-web-design-I">Responsive Web Design I Project</a></h3>
+								<p>Working with media queries in CSS.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/Cwill14/UI-III-Flexbox" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<h3><a href="https://github.com/Cwill14/UI-III-Flexbox">UI III: Flexbox</a></h3>
+								<p>Working with flexboxes in CSS.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Interested in my work? Have any questions?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -141,7 +141,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<p>Send me an e-mail to get in touch!</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -172,7 +172,7 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/clarktwilliams?lang=en" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
